[package]
name = "sync-lsp-example"
version = "0.1.0"
edition = "2021"

description = "A example of sync-lsp"
readme = "README.md"
repository = "https://github.com/K83FJ3M4/sync-lsp"
publish = false

[dependencies]
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
sync-lsp = { path = "../sync-lsp", default-features = false }
