[package]
name = "sync-lsp"
version = "0.1.0"
authors = ["Phillip Mendel"]
edition = "2021"
description = "A synchronous LSP library for servers"
documentation = "https://docs.rs/sync-lsp"
readme = "README.md"
repository = "https://github.com/K83FJ3M4/sync-lsp"
license = "MIT"
keywords = ["lsp", "language-server"]
categories = ["development-tools", "editor-plugins", "language-tools"]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
mio = { version = "0.8.*", features = ["os-poll", "os-ext", "net"], optional = true }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_repr = "0.1.*"
sync-lsp-derive = { version = "0.1.0", path = "../sync-lsp-derive" }

[features]
default = ["mio", "dynamic-callbacks"]
mio = ["dep:mio"]
dynamic-callbacks = []